--- a/index.html
+++ b/index.html
@@ -1,57 +1,210 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Weather Dashboard</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
-  <title>Weather Dashboard</title>
-</head>
+  <body>
+    <header
+      class="container-fluid text-center text-white bg-dark p-2 weather-header"
+    >
+      <h1>Weather Dashboard</h1>
+    </header>
 
-<body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
+    <!-- max-width for ultra wide resolutions -->
+    <div class="container-fluid" style="max-width: 1400px">
+      <div class="row">
+        <aside class="col-lg-3 pb-3">
+          <h2 id="form-heading" class="mt-1 h3 form-label">
+            Search for a City:
+          </h2>
+          <form id="search-form" class="form">
+            <div class="form-inline form-group mb-1">
+              <input
+                class="form-input weather-search w-100"
+                type="text"
+                id="search-input"
+                placeholder="  London"
+                aria-labelledby="form-heading"
+                aria-controls="today forecast"
+              />
 
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
+              <button
+                type="submit"
+                class="btn btn-primary w-100 mt-2 mb-0 search-button btn-block"
+                id="search-button"
+                aria-label="submit search"
+              >
+                Search
+              </button>
+              <hr class="hr weather-hr" />
+            </div>
+          </form>
+          <div class="list-group" id="history">
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+            <button
+              type="submit"
+              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
+              id="search-button"
+              aria-label="submit search"
+            >
+              Search
+            </button>
+          </div>
+        </aside>
+
+        <div class="col-lg-9 pb-3">
+          <section id="today" class="mt-3" role="region" aria-live="polite">
+            <h2 id="current-weather-heading" class="mt-1 h3">
+              London (14/12/23)
+            </h2>
+            <div class="conditions">Temp: <span id="temp"></span></div>
+            <div class="conditions">Wind:<span id="wind"></span></div>
+            <div class="conditions">Humidity: <span id="humidity"></span></div>
+          </section>
+          <section
+            id="forecast"
+            class="row mt-3 ml-0 mr-0"
+            role="region"
+            aria-live="polite"
+          >
+            <h2 id="form-heading" class="mt-1 h4">5-Day-Forecast:</h2>
+            <div id="weather-cards" class="row row-cols-5 w-100 m-0">
+              <div id="day-1" class="card mr-4">
+                <div class="card-body">
+                  <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
+                  <i></i>
+                  <div class="conditions">
+                    Temp: <span id="temp-day-1"></span>
+                  </div>
+                  <div class="conditions">
+                    Wind:<span id="wind-day-1"></span>
+                  </div>
+                  <div class="conditions">
+                    Humidity: <span id="humidity-day-1"></span>
+                  </div>
+                </div>
+              </div>
+              <div id="day-2" class="card mr-4">
+                <div class="card-body">
+                  <div class="conditions">
+                    <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
+                    Temp: <span id="temp-day-2"></span>
+                  </div>
+                  <div class="conditions">
+                    Wind:<span id="wind-day-2"></span>
+                  </div>
+                  <div class="conditions">
+                    Humidity: <span id="humidity-day-2"></span>
+                  </div>
+                </div>
+              </div>
+              <div id="day-3" class="card mr-4">
+                <div class="card-body">
+                  <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
+                  <div class="conditions">
+                    Temp: <span id="temp-day-3"></span>
+                  </div>
+                  <div class="conditions">
+                    Wind:<span id="wind-day-3"></span>
+                  </div>
+                  <div class="conditions">
+                    Humidity: <span id="humidity-day-3"></span>
+                  </div>
+                </div>
+              </div>
+              <div id="day-4" class="card mr-4">
+                <div class="card-body">
+                  <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
+                  <div class="conditions">
+                    Temp: <span id="temp-day-4"></span>
+                  </div>
+                  <div class="conditions">
+                    Wind:<span id="wind-day-4"></span>
+                  </div>
+                  <div class="conditions">
+                    Humidity: <span id="humidity-day-4"></span>
+                  </div>
+                </div>
+              </div>
+              <div id="day-5" class="card mr-4">
+                <div class="card-body">
+                  <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
+                  <div class="conditions">
+                    Temp: <span id="temp-day-5"></span>
+                  </div>
+                  <div class="conditions">
+                    Wind:<span id="wind-day-5"></span>
+                  </div>
+                  <div class="conditions">
+                    Humidity: <span id="humidity-day-5"></span>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+          </section>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
-</body>
-
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./assets/script/script.js"></script>
+  </body>
 </html>
