--- a/index.html
+++ b/index.html
@@ -56,54 +56,12 @@
             </div>
           </form>
           <div class="list-group" id="history">
-            <button
+            <!-- <button
               type="submit"
               class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
               id="search-button"
               aria-label="submit search"
-            >
-              Search
-            </button>
-            <button
-              type="submit"
-              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
-              id="search-button"
-              aria-label="submit search"
-            >
-              Search
-            </button>
-            <button
-              type="submit"
-              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
-              id="search-button"
-              aria-label="submit search"
-            >
-              Search
-            </button>
-            <button
-              type="submit"
-              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
-              id="search-button"
-              aria-label="submit search"
-            >
-              Search
-            </button>
-            <button
-              type="submit"
-              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
-              id="search-button"
-              aria-label="submit search"
-            >
-              Search
-            </button>
-            <button
-              type="submit"
-              class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
-              id="search-button"
-              aria-label="submit search"
-            >
-              Search
-            </button>
+            > -->
           </div>
         </aside>
 
