--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
         </aside>
 
         <div class="col-lg-9 pb-3">
-          <section id="today" class="mt-3" role="region" aria-live="polite">
+          <section
+            id="today"
+            class="mt-3 hidden"
+            role="region"
+            aria-live="polite"
+          >
             <h2 id="current-weather-heading" class="h3">London (14/12/23)</h2>
             <img
               id="current-weather-icon"
@@ -80,13 +85,13 @@
           </section>
           <section
             id="forecast"
-            class="row mt-3 ml-0 mr-0"
+            class="row mt-3 ml-0 mr-0 hidden"
             role="region"
             aria-live="polite"
           >
             <h2 id="form-heading" class="mt-1 h4">5-Day-Forecast:</h2>
             <div id="weather-cards" class="row row-cols-5 w-100 m-0">
-              <div id="day-1" class="card mr-4">
+              <div id="day-1" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
                   <img src="http://openweathermap.org/img/wn/10d@2x.png" />
@@ -101,7 +106,7 @@
                   </div>
                 </div>
               </div>
-              <div id="day-2" class="card mr-4">
+              <div id="day-2" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-2-date" class="mt-1 h5">12/01/22</h2>
                   <img src="http://openweathermap.org/img/wn/10d@2x.png" />
@@ -116,7 +121,7 @@
                   </div>
                 </div>
               </div>
-              <div id="day-3" class="card mr-4">
+              <div id="day-3" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-3-date" class="mt-1 h5">12/01/22</h2>
                   <img src="http://openweathermap.org/img/wn/10d@2x.png" />
@@ -131,7 +136,7 @@
                   </div>
                 </div>
               </div>
-              <div id="day-4" class="card mr-4">
+              <div id="day-4" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-4-date" class="mt-1 h5">12/01/22</h2>
                   <img src="http://openweathermap.org/img/wn/10d@2x.png" />
@@ -146,7 +151,7 @@
                   </div>
                 </div>
               </div>
-              <div id="day-5" class="card mr-4">
+              <div id="day-5" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-5-date" class="mt-1 h5">12/01/22</h2>
                   <img src="http://openweathermap.org/img/wn/10d@2x.png" />
