--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 aria-labelledby="form-heading"
                 aria-controls="today forecast"
               />
-
+              <!--button syled with bootsrap w-100 used to stretch button across available space-->
               <button
                 type="submit"
                 class="btn btn-primary w-100 mt-2 mb-0 search-button btn-block"
@@ -56,6 +56,7 @@
             </div>
           </form>
           <div class="list-group" id="history">
+            <!--below html dynamically created search history buttons see row-->
             <!-- <button
               type="submit"
               class="btn btn-primary w-100 mt-2 mb-1 search-button btn-block"
@@ -85,12 +86,14 @@
           </section>
           <section
             id="forecast"
-            class="row mt-3 ml-0 mr-0 hidden"
+            class="mt-3 ml-0 mr-0 hidden"
             role="region"
             aria-live="polite"
           >
             <h2 id="form-heading" class="mt-1 h4">5-Day-Forecast:</h2>
+            <!--row row-cols-5 creates 5 equallly spaced columns for each nested div-->
             <div id="weather-cards" class="row row-cols-5 w-100 m-0">
+              <!--mx-auto equally spaces the weather cards within the parent div-->
               <div id="day-1" class="card mx-auto">
                 <div class="card-body">
                   <h2 id="day-1-date" class="mt-1 h5">12/01/22</h2>
